# PythonAutomatizationHomeworks-Ernest-Georkiani

./: Lecture11_task1.py  Leqcia10_Task3_Pipqiani_davaleba.py  README.md  lecture6_task1.py  lecture7_task1.py  leqcia8_davaleba.py  leqcia9_davaleba.py  pyproject.toml  rds.py
Lecture8_Task2_StarTask/: LEQCIA8_TASK2_PIPQIANI_DAVAELBA.PY  functionality.js  page.html  style.css
src/task4_bonus/: bonus_task4-week2.py  bonus_task4-week3.py  task1_week3.py  task2_week3.py  task3_week3.py
